# Ecommecer

./: .env  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Ecommecer/: apps.py  models.py  urls.py  views.py
Ecommecer/api/: api.py  schema.py
Ecommecer/migrations/: 0001_initial.py  0002_pedido_numero_rastreio_alter_pedido_status_and_more.py
Ecommecer/templates/: carrinho.html  ecommecer.html  painel_pedidos.html  produto.html
cadastro/: models.py  urls.py  views.py
cadastro/api/: api.py  schemas.py
cadastro/migrations/: 0001_initial.py  0002_alter_codigocadastro_validade.py  0003_alter_codigocadastro_validade.py  0004_alter_codigocadastro_validade.py  0005_alter_codigocadastro_validade.py  0006_alter_codigocadastro_validade.py  0007_alter_codigocadastro_validade.py  0008_alter_codigocadastro_validade.py  0009_alter_codigocadastro_validade.py
cadastro/templates/: cadastro.html  codigo.html
core/: OAuth.py  api.py  celery.py  client_id.json  settings.py  tasks.py  token.pickle  tokens.py  urls.py
painel_adm/: models.py  urls.py  utils.py  views.py
painel_adm/api/: api.py  schema.py
painel_adm/management/commands/: verificar_entregas.py
painel_adm/migrations/: 0001_initial.py
painel_adm/templates/: atualizar_rastreio.html
templates/: base.html
